# pipes-ghc-events

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  cabal.project  default.nix  ghc-events-count.hs  ghc-events-pipes.hs  hie.yaml  pipes-ghc-events.cabal  shell.nix  test.nix
.github/workflows/: test.yml
eventlog2speedscope/: CHANGELOG.md  LICENSE  eventlog2speedscope.cabal  eventlog2speedscope.hs
eventlog2speedscope/src/: eventlog2speedscope.hs
eventlog2speedscope/src/Speedscope/: FrameDict.hs  Main.hs
nix/: sources.json
pipes-ghc-events/: CHANGELOG.md  pipes-ghc-events.cabal
pipes-ghc-events/src/Pipes/GHC/RTS/: Events.hs
