cabal-version: 2.2

name: eventlog2speedscope
version: 0.1.0
synopsis: Visualize user events with speedscope
-- description:
-- bug-reports:
license: BSD-3-Clause
license-file: LICENSE
author: Thomas Tuegel
maintainer: ttuegel@mailbox.org
copyright: (c) 2019 Thomas Tuegel
category: Development, GHC, Debug, Profiling, Trace
build-type: Simple
extra-source-files: CHANGELOG.md

common def
  default-extensions:
    BlockArguments
    DataKinds
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeApplications
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Wredundant-constraints
    -Wmissing-export-lists
  build-depends:
    base >=4.12 && <5,

library
  import: def
  hs-source-dirs: src
  build-depends:
    aeson ^>=1.5,
    binary ^>=0.8,
    bytestring,
    containers ^>=0.6,
    generic-lens ^>=2.0,
    ghc-events ^>=0.13,
    hashable ^>=1.3,
    lens ^>=4.19,
    mtl ^>=2.2,
    optparse-applicative ^>=0.15,
    pipes ^>=4.3,
    pipes-aeson ^>=0.4,
    pipes-bytestring ^>=2.1,
    pipes-ghc-events ^>=0.1,
    pipes-parse ^>=3.0,
    pipes-safe ^>=2.3,
    pipes-sqlite-simple ^>=0.2,
    sqlite-simple ^>=0.4,
    text ^>=1.2,
    transformers ^>=0.5,
    unordered-containers ^>=0.2,
  exposed-modules:
    Speedscope.FrameDict
    Speedscope.Main

executable eventlog2speedscope
  import: def
  main-is: eventlog2speedscope.hs
  build-depends:
    eventlog2speedscope,
    optparse-applicative ^>=0.15,
