cabal-version: 2.2

name: pipes-ghc-events
version: 0.1.0.0
synopsis: Compositional pipelines for parsing .eventlog files
-- description:
-- bug-reports:
license: BSD-3-Clause
license-file: LICENSE
author: Thomas Tuegel
maintainer: ttuegel@mailbox.org
copyright: (c) 2019 Thomas Tuegel
category: Development, GHC, Debug, Profiling, Trace, Pipes
build-type: Simple
extra-source-files: CHANGELOG.md

common def
  default-extensions:
    BlockArguments
    DataKinds
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeApplications
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Wredundant-constraints
    -Wmissing-export-lists
  build-depends:
    base ^>= 4.12,

library
  import: def
  hs-source-dirs: src
  build-depends:
    bytestring >= 0.10,
    ghc-events >= 0.13,
    pipes >= 4.3,
    pipes-parse >= 3.0,
    transformers >= 0.5,
  exposed-modules:
    Pipes.GHC.RTS.Events
